src/objects/Firm__c.object
<CustomObject>
    <fields>
        <fullName>Date_Retained__c</fullName>
        <label>Date Retained</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Update__c</fullName>
        <label>Date of Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Lawyer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Law Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Firms</relationshipLabel>
        <relationshipName>Firms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lawyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lawyer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Firms</relationshipLabel>
        <relationshipName>Firms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Firms</relationshipLabel>
        <relationshipName>Firms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Lawyer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <label>Firm</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Firm Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Firms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>